# ndc-sdk-python

./: .gitignore  README.md  changelog.md  flake.nix  pyproject.toml  requirements.txt  setup.py
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link
.github/workflows/: build.yaml  changelog.yaml  publish.yaml
hasura_ndc/: __init__.py  configuration_server.py  connector.py  errors.py  function_connector.py  instrumentation.py  main.py  models.py  server.py
src/ndc_sdk_python/: __init__.py  connector.py  function_connector.py  main.py  models.py  server.py
